feat: add layout to header

--- a/src/app/feature/components/header/login/login.component.html
+++ b/src/app/feature/components/header/login/login.component.html
@@ -1,1 +1,4 @@
-<p>login works!</p>
+<figure class="login">
+    <figcaption>Your Name</figcaption>
+    <img src="./../../../../../assets/header/login.svg" alt="user photo">
+</figure>
