--- a/src/app/feature/components/search/search.component.html
+++ b/src/app/feature/components/search/search.component.html
@@ -1,1 +1,5 @@
-<p>search works!</p>
+<div class="search">
+    <input type="search" placeholder="What are you want to find out?" name="search">
+    <img src="./../../../../assets/header/search_button.svg" alt="search button">
+    <img src="./../../../../assets/header/search_settings.svg" alt="setting">
+</div>
