--- a/src/app/feature/components/header/header.component.html
+++ b/src/app/feature/components/header/header.component.html
@@ -1,1 +1,7 @@
-<p>header works!</p>
+<div class="wrapper">
+    <h1 class="logo">
+        <img src="./../../../../assets/header/logo.svg" alt="logo">
+    </h1>
+    <app-search></app-search>
+</div>
+<app-login></app-login>
