feat: add asset for card, create search result components

--- a/src/app/feature/components/header/filter/filter.component.html
+++ b/src/app/feature/components/header/filter/filter.component.html
@@ -1,1 +1,7 @@
-<p>sorting works!</p>
+<div class="filter">
+    <span>Sorting by:</span>
+    <a href="#">date</a>
+    <a href="#">count of views</a>
+    <a href="#">by word or sentence</a>
+    <input type="text">
+</div>
