--- a/src/app/feature/components/search-result-list/clip-card/clip-card.component.html
+++ b/src/app/feature/components/search-result-list/clip-card/clip-card.component.html
@@ -1,1 +1,10 @@
-<p>clip-card works!</p>
+<div class="clip-card">
+    <div class="clip-card__thumbnail">
+        <img src="https://i.ytimg.com/vi/YN8zNnV0sK8/default.jpg" alt="img">
+        <app-like-panel class="clip-card__like-panel"></app-like-panel>
+    </div>
+    <h2 class="clip-card__title">Kuji Podcast #</h2>
+    <img class="clip-card__button" src="./assets/clip-card/more-button.svg" alt="more button">
+</div>
+
+
