--- a/src/app/feature/components/search-result-list/like-panel/like-panel.component.html
+++ b/src/app/feature/components/search-result-list/like-panel/like-panel.component.html
@@ -1,1 +1,18 @@
-<p>like-panel works!</p>
+<div class="like-panel">
+    <figure>
+        <img src="./assets/clip-card/viewed.svg" alt="viewed">
+        <figcaption>1000</figcaption>
+    </figure>
+    <figure>
+        <img src="./assets/clip-card/liked.svg" alt="viewed">
+        <figcaption>680</figcaption>
+    </figure>
+    <figure>
+        <img src="./assets/clip-card/dislike.svg" alt="viewed">
+        <figcaption>320</figcaption>
+    </figure>
+    <figure>
+        <img src="./assets/clip-card/group.svg" alt="viewed">
+        <figcaption>250</figcaption>
+    </figure>
+</div>
